2009-06-01 Dong H. Ahn <ahn1@llnl.gov>
	* Added a minor bug fix to detect the master thread ID correctly.
	  (A bug introduced by one of changes made on 2009-05-20)
	* Upped the grace period by x10 bewteen two consecutive signals
	  to overcome unreliable UNIX signals. For some platforms,
	  it turned out that sending SIGSTOPs to all the threads (lwp)
	  of the target process did not cause all of them to stop
	  with a short grace period...


2009-05-20 Dong H. Ahn <ahn1@llnl.gov>
	* Added LMON_fe_regErrorCB support (ID2787962)
	* Added a fix for the "re-attach" defect on BlueGene/P. 
	  The fix requires the IBM efix27 or higher.
	* Added a fix for the back-end and front-end [recv|send]UsrData functions
	  to return correct error codes. Added a new error code 
	  (LMON_ENEGCB) to lmon_api_std.h to deal with a
	  negative code returning from user-provided 
	  pack/unpack callback routines. (ID2787959) 
	* Changed the library version to -version-info 1:0:1.
	  It is because this revision added new API calls and 
	  bug fixes for existing API calls.


2009-03-11 Dong H. Ahn <ahn1@llnl.gov>
	* Generalized the BlueGene support in support of BGP
	  Configure's --with-rm option now takes "bgrm" instead of 
	  bglrm or bgprm.
	* Deprecated the GLUESYM support in favor of indirect
	  breakpoint support.
	* launchmon/src/linux/sdbg_linux_ttracer_impl.[hxx|cxx]
	  launchmon/src/linux/sdbg_linux_thr_db.[hxx|cxx]:
	  Added runtime linking support for the thread_db library,
	  and deprecated the static configure check for
	  that library defined in config/x_ac_thread_db.m4.
	* Deprecated the library version of ciod_db as IBM
	  open-sourced the CIOD debugger interface codes 
	  entire via a header file.
	* configure.ac
	  launchmon/src/linux/lmon_api/lmon_fe.cxx:
	  Bug fix in the pthread_cond_timedwait
	  return code checking logic for launchmon engine 
	  connection: the only correct return code
	  from pthread condition wait is zero; there were