@@ -42,7 +42,7 @@ Evaluates to a non-zero value if the middleware daemons have been spawned.
 .BI WIFDETACHED( status_val ) 
 Evaluates to a non-zero value if the job has been detached.
 .TP
-.BI IFKILLED( status_val ) 
+.BI WIFKILLED( status_val ) 
 Evaluates to a non-zero value if the job has been killed.
 
 
