@@ -39,11 +39,11 @@
 RM_TYPE=@RMTP@
 NUMNODES=@NNODES@
 
-if test "x$RM_TYPE" = "xbgrm" ; then
-  rm -f nohup.out
-  echo "[LMON FE] Test Not Implemented Yet"
-  exit 1
-fi
+#if test "x$RM_TYPE" = "xbgrm" ; then
+#  rm -f nohup.out
+#  echo "[LMON FE] Test Not Implemented Yet"
+#  exit 1
+#fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES 
@@ -55,7 +55,7 @@ export LMON_FE_KILL_TEST=1
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xbgrm" ; then 
-  $MPI_JOB_LAUNCHER_PATH -verbose 0 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
+  $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet" 
 fi
