@@ -47,9 +47,9 @@ SIGNUM=18
 
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_ADDITIONAL_FE_STALL=1
-export LMON_ERROR_CB_TEST=1
+export LMON_STATUS_CB_TEST=1
 
-echo "This is a munual test that can be used to check "
+echo "This is a manual test that can be used to check "
 echo "the distributed state when a failure occurrs as "
 echo "defined in README.ERROR_HANDLING."
 echo "A. once job/daemons are launched, kill -SEGV <launchmon pid>"
